schronisko do sprawdzenia

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Schronisko</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8"/>-->
+    <!--<title>Schronisko</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<h1>Nie kupuj, adoptuj!</h1>
+<!--<h1>Nie kupuj, adoptuj!</h1>-->
 
-<a href="/azor">Poznaj Azora</a><br>
-<a href="/bella">Poznaj Bellę</a>
+<!--<a href="/azor">Poznaj Azora</a><br>-->
+<!--<a href="/bella">Poznaj Bellę</a>-->
 
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
